Retrieve scan (#4)
* Add ability to retrieve a single scan, fix broken references in mongo.

* Move helpers out of handlers
